# terminal

./: CONTRIBUTING.md  Cargo.toml  PERFORMANCE.md  README.md
.github/workflows/: ci.yml
scripts/: ci-check.sh
src/: api.rs  config.rs  lib.rs  logging.rs
src/cli/: types.rs  utils.rs
src/cli/commands/: admin.rs  config.rs  todo.rs
src/tui/: app.rs  components.rs  ui.rs
